--- a/pom.xml
+++ b/pom.xml
@@ -3,15 +3,15 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.ruinscraft</groupId>
-	<artifactId>dukesmart</artifactId>
+	<artifactId>keyboi</artifactId>
 	<version>1.0.0</version>
 
-	<name>DukesMart</name>
+	<name>KeyBoi</name>
 
 	<properties>
 		<maven.compiler.source>8</maven.compiler.source>
 		<maven.compiler.target>8</maven.compiler.target>
-		<mainClass>com.ruinscraft.dukesmart.DukesMart</mainClass>
+		<mainClass>com.ruinscraft.keyboi.KeyBoi</mainClass>
 		<jar.finalName>${project.name}</jar.finalName>
 	</properties>
 
